# stellar-nebula-nomad

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  NOMAD_BONDING_GUIDE.md  STRUCTURE.md  YIELD_MATH.md
examples/: scan_example.rs
scripts/: deploy.sh
src/: governance.rs  indexer_callbacks.rs  lib.rs  nebula_explorer.rs  nomad_bonding.rs  resource_minter.rs  ship_registry.rs  theme_customizer.rs
test_snapshots/: test_accept_bond_activates.1.json  test_accept_bond_wrong_partner_panics.1.json  test_accrue_essence.1.json  test_accrue_essence_accumulates.1.json  test_claim_yield_after_dissolve_panics.1.json  test_claim_yield_delegator_cannot_claim_own_delegation.1.json  test_claim_yield_emits_event.1.json  test_claim_yield_multiple_claims.1.json  test_claim_yield_non_beneficiary_panics.1.json  test_claim_yield_transfers_correct_amount.1.json  test_claim_yield_updates_total_yielded.1.json  test_claim_yield_zero_balance_returns_zero.1.json  test_create_bond_emits_event.1.json  test_create_bond_increments_ids.1.json  test_delegate_yield_outsider_panics.1.json  test_delegate_yield_partner_to_initiator.1.json  test_delegate_yield_sets_config.1.json  test_delegate_yield_zero_panics.1.json  test_different_seeds_produce_different_layouts.1.json  test_dissolve_bond_by_initiator.1.json  test_dissolve_bond_by_partner.1.json  test_dissolve_bond_twice_panics.1.json  test_dissolve_pending_bond.1.json  test_full_bonding_flow.1.json  test_generate_layout_deterministic.1.json  test_generate_layout_dimensions.1.json  test_get_bond.1.json  (+12 more)
(+2 files in other folders)
