[package]
name = "stellar-nebula-nomad"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Decentralized space exploration sim on Stellar with procedural nebula generation and NFT ships"
repository = "https://github.com/yourusername/stellar-nebula-nomad"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0"

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
